# ai-cli

./: README.md  project.toml  pyproject.toml
ai-cli/: __init__.py  cli.py  keys.py  models.py  plugins.py
