[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-cli"
version = "0.1.0"
description = "Access ALL AI models (LLM, image, video, audio, ...) from the command line — plugin extensible"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [{name = "Your Name", email = "you@example.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "click >=8.1.0",
    "click-plugins >=1.0",           # optional helper, or implement manually
    "pydantic >=2.0",
    "rich >=13.0",                   # nice output
    "requests >=2.28",
    "sqlite-utils >=3.35",           # optional logging like LLM
]

[project.scripts]
ai-cli = "ai-cli.cli:cli"

[project.entry-points."ai-cli.models"]
# Example built-in (dummy) — real ones come from plugins
dummy-llm = "ai-cli.providers.dummy:DummyLLM"

[project.entry-points."ai-cli.commands"]
# Plugins can register extra top-level commands